--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <!-- Hoja 1 -->
 <section class="showcase-area" id="showcase">
     <div class="showcase-container">
-        <h1 class="main-title" id="home">PROYECTO INTEGRADOR</h1>
-        <p>Eat Healty, it is good for our health.</p>
+        <h1 class="main-title" id="home">CESDEFAST</h1>
+        <p>PRESTAMOS DE EQUIPOS SEDE BELLO.</p>
         <a href="#food-menu" class="btn btn-primary">Menu</a>
     </div>
 </section>
@@ -25,14 +25,16 @@
 <section id="about">
     <div class="about-wrapper container">
         <div class="about-text">
-            <p class="small">About Us</p>
-            <h2>We've beem making healthy food last for 10 years</h2>
+            <p class="small">RESERVAS</p>
+            <h2>Equipos</h2>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse ab
-                eos omnis, nobis dignissimos perferendis et officia architecto,
-                fugiat possimus eaque qui ullam excepturi suscipit aliquid optio,
-                maiores praesentium soluta alias asperiores saepe commodi
-                consequatur? Perferendis est placeat facere aspernatur!
+                "En nuestra sede, ofrecemos un servicio de préstamo de computadoras para satisfacer las necesidades de
+                nuestros estudiantes. Este servicio permite a los estudiantes acceder a equipos de alta calidad
+                para realizar tareas académicas, investigaciones o proyectos. Con una variedad de computadoras
+                disponibles, desde portátiles hasta estaciones de trabajo, nuestro objetivo es proporcionar una
+                experiencia informática óptima para todos. Los usuarios pueden solicitar el préstamo de equipos por un
+                período específico, asegurando así una distribución equitativa y un uso eficiente de los recursos
+                tecnológicos de nuestra institución."
             </p>
         </div>
         <div class="about-img">
@@ -41,7 +43,7 @@
     </div>
 </section>
 <section id="food">
-    <h2>Types of food</h2>
+    <h2>SALAS</h2>
     <div class="food-container container">
         <div class="food-type fruite">
             <div class="img-container">
@@ -74,7 +76,7 @@
     </div>
 </section>
 <section id="food-menu">
-    <h2 class="food-menu-heading">Food Menu</h2>
+    <h2 class="food-menu-heading">EQUIPOS</h2>
     <div class="food-menu-container container">
         <div class="food-menu-item">
             <div class="food-img">
@@ -160,7 +162,7 @@
 </section>
 <!-- Hoja 3 -->
 <section id="testimonials">
-    <h2 class="testimonial-title">What Our Customers Say</h2>
+    <h2 class="testimonial-title">Lo que dicen nuestros estudiantes</h2>
     <div class="testimonial-container container">
         <div class="testimonial-box">
             <div class="customer-detail">
@@ -240,7 +242,7 @@
     </div>
 </section>
 <footer id="footer">
-    <h2>Restraunt &copy; all rights reserved</h2>
+    <h2>CESDEFAST &copy; RESERVAS</h2>
 </footer>
 </body>
 <!-- .................../ JS Code for smooth scrolling /...................... -->
