--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </p>
         </div>
         <div class="about-img">
-            <img src="https://i.postimg.cc/mgpwzmx9/about-photo.jpg" alt="food" />
+            <img src="" alt="food" />
         </div>
     </div>
 </section>
