--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="food-container container">
         <div class="food-type fruite">
             <div class="img-container">
-                <img src="https://i.postimg.cc/yxThVPXk/food1.jpg" alt="error" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast.jfif?alt=media&token=7ff3106a-afc8-4bab-858f-6c0aef8d5149" alt="error" />
                 <div class="img-content">
                     <h3>fruite</h3>
                     <a href="https://en.wikipedia.org/wiki/Fruit" class="btn btn-primary" target="blank">learn more</a>
@@ -56,7 +56,7 @@
         </div>
         <div class="food-type vegetable">
             <div class="img-container">
-                <img src="https://i.postimg.cc/Nffm6Rkk/food2.jpg" alt="error" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast3.jfif?alt=media&token=37dbe3c7-b50a-41d5-9ed3-6086e8a355ad" alt="error" />
                 <div class="img-content">
                     <h3>vegetable</h3>
                     <a href="https://en.wikipedia.org/wiki/Vegetable" class="btn btn-primary" target="blank">learn
@@ -66,7 +66,7 @@
         </div>
         <div class="food-type grin">
             <div class="img-container">
-                <img src="https://i.postimg.cc/76ZwsPsd/food3.jpg" alt="error" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast6.jfif?alt=media&token=0b0a4e8a-e393-460d-934f-2a83d54e7f27" alt="error" />
                 <div class="img-content">
                     <h3>grin</h3>
                     <a href="https://en.wikipedia.org/wiki/Grain" class="btn btn-primary" target="blank">learn more</a>
