--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="showcase-container">
         <h1 class="main-title" id="home">CESDEFAST</h1>
         <p>PRESTAMOS DE EQUIPOS SEDE BELLO.</p>
-        <a href="#food-menu" class="btn btn-primary">Menu</a>
+        <a href="#food-menu" class="btn btn-primary">RESERVAS</a>
     </div>
 </section>
 
@@ -38,7 +38,7 @@
             </p>
         </div>
         <div class="about-img">
-            <img src="" alt="food" />
+            <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/web5.jpg?alt=media&token=556c45e8-c97f-4c3f-a0dd-50eebc624637" alt="food" />
         </div>
     </div>
 </section>
@@ -49,8 +49,8 @@
             <div class="img-container">
                 <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast.jfif?alt=media&token=7ff3106a-afc8-4bab-858f-6c0aef8d5149" alt="error" />
                 <div class="img-content">
-                    <h3>fruite</h3>
-                    <a href="https://en.wikipedia.org/wiki/Fruit" class="btn btn-primary" target="blank">learn more</a>
+                    <h3>cesde.edu.com</h3>
+                    <a href="https://www.cesde.edu.co/" class="btn btn-primary" target="blank">Mas informacion</a>
                 </div>
             </div>
         </div>
@@ -58,9 +58,9 @@
             <div class="img-container">
                 <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast3.jfif?alt=media&token=37dbe3c7-b50a-41d5-9ed3-6086e8a355ad" alt="error" />
                 <div class="img-content">
-                    <h3>vegetable</h3>
-                    <a href="https://en.wikipedia.org/wiki/Vegetable" class="btn btn-primary" target="blank">learn
-                        more</a>
+                    <h3>educaciondigital</h3>
+                    <a href="https://www.cesde.edu.co/educaciondigital/" class="btn btn-primary" target="blank">Aprende mas
+                        </a>
                 </div>
             </div>
         </div>
@@ -68,8 +68,8 @@
             <div class="img-container">
                 <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast6.jfif?alt=media&token=0b0a4e8a-e393-460d-934f-2a83d54e7f27" alt="error" />
                 <div class="img-content">
-                    <h3>grin</h3>
-                    <a href="https://en.wikipedia.org/wiki/Grain" class="btn btn-primary" target="blank">learn more</a>
+                    <h3>FormacionDigital</h3>
+                    <a href="https://platzi.com/welcome/cesde/" class="btn btn-primary" target="blank">Ingresa</a>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
     <div class="food-menu-container container">
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://i.postimg.cc/wTLMsvSQ/food-menu1.jpg" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/web3.jpg?alt=media&token=7df943c6-a3e5-4fcd-a4e5-da01ec70b574" alt="" />
             </div>
             <div class="food-description">
                 <h2 class="food-titile">Food Menu Item 1</h2>
@@ -95,7 +95,7 @@
         <!-- Hoja 2 -->
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://i.postimg.cc/sgzXPzzd/food-menu2.jpg" alt="error" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesde10.jpg?alt=media&token=a8065b39-4968-41e5-8148-9849c20eacc9" alt="error" />
             </div>
             <div class="food-description">
                 <h2 class="food-titile">Food Menu Item 2</h2>
@@ -108,7 +108,7 @@
         </div>
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://i.postimg.cc/8zbCtYkF/food-menu3.jpg" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesde11.jpg?alt=media&token=9ddf7b0d-f8fd-4674-b410-9db8a87669fa" alt="" />
             </div>
             <div class="food-description">
                 <h2 class="food-titile">Food Menu Item 3</h2>
@@ -121,7 +121,7 @@
         </div>
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://i.postimg.cc/Yq98p5Z7/food-menu4.jpg" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/web5.jpg?alt=media&token=556c45e8-c97f-4c3f-a0dd-50eebc624637" alt="" />
             </div>
             <div class="food-description">
                 <h2 class="food-titile">Food Menu Item 4</h2>
@@ -134,7 +134,7 @@
         </div>
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://i.postimg.cc/KYnDqxkP/food-menu5.jpg" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast3.jfif?alt=media&token=37dbe3c7-b50a-41d5-9ed3-6086e8a355ad" alt="" />
             </div>
             <div class="food-description">
                 <h2 class="food-titile">Food Menu Item 5</h2>
@@ -147,7 +147,7 @@
         </div>
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://i.postimg.cc/Jnxc8xQt/food-menu6.jpg" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast2.jfif?alt=media&token=41d55651-5ede-4da6-ad33-39b2c0c933f5" alt="" />
             </div>
             <div class="food-description">
                 <h2 class="food-titile">Food Menu Item 6</h2>
