--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>      
+<body>
 
 </body>
 
@@ -38,7 +38,8 @@
             </p>
         </div>
         <div class="about-img">
-            <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/web5.jpg?alt=media&token=556c45e8-c97f-4c3f-a0dd-50eebc624637" alt="food" />
+            <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/web5.jpg?alt=media&token=556c45e8-c97f-4c3f-a0dd-50eebc624637"
+                alt="food" />
         </div>
     </div>
 </section>
@@ -47,7 +48,8 @@
     <div class="food-container container">
         <div class="food-type fruite">
             <div class="img-container">
-                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast.jfif?alt=media&token=7ff3106a-afc8-4bab-858f-6c0aef8d5149" alt="error" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast.jfif?alt=media&token=7ff3106a-afc8-4bab-858f-6c0aef8d5149"
+                    alt="error" />
                 <div class="img-content">
                     <h3>cesde.edu.com</h3>
                     <a href="https://www.cesde.edu.co/" class="btn btn-primary" target="blank">Mas informacion</a>
@@ -56,17 +58,20 @@
         </div>
         <div class="food-type vegetable">
             <div class="img-container">
-                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast3.jfif?alt=media&token=37dbe3c7-b50a-41d5-9ed3-6086e8a355ad" alt="error" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast3.jfif?alt=media&token=37dbe3c7-b50a-41d5-9ed3-6086e8a355ad"
+                    alt="error" />
                 <div class="img-content">
                     <h3>educaciondigital</h3>
-                    <a href="https://www.cesde.edu.co/educaciondigital/" class="btn btn-primary" target="blank">Aprende mas
-                        </a>
+                    <a href="https://www.cesde.edu.co/educaciondigital/" class="btn btn-primary" target="blank">Aprende
+                        mas
+                    </a>
                 </div>
             </div>
         </div>
         <div class="food-type grin">
             <div class="img-container">
-                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast6.jfif?alt=media&token=0b0a4e8a-e393-460d-934f-2a83d54e7f27" alt="error" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast6.jfif?alt=media&token=0b0a4e8a-e393-460d-934f-2a83d54e7f27"
+                    alt="error" />
                 <div class="img-content">
                     <h3>FormacionDigital</h3>
                     <a href="https://platzi.com/welcome/cesde/" class="btn btn-primary" target="blank">Ingresa</a>
@@ -80,82 +85,85 @@
     <div class="food-menu-container container">
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/web3.jpg?alt=media&token=7df943c6-a3e5-4fcd-a4e5-da01ec70b574" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/web3.jpg?alt=media&token=7df943c6-a3e5-4fcd-a4e5-da01ec70b574"
+                    alt="" />
             </div>
             <div class="food-description">
-                <h2 class="food-titile">Food Menu Item 1</h2>
+                <h2 class="food-titile">Sala de Estudio y Préstamo de Equipos</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                    quae.
+                    Ofrecemos computadoras portátiles y de escritorio de alta calidad para estudiantes.
+                    Nuestro personal está disponible para asistencia técnica. ¡Visítanos y aprovecha nuestros servicios
+                    tecnológicos!
                 </p>
-                <p class="food-price">Price: &#8377; 250</p>
+                <p class="food-price">CESDEFAST</p>
             </div>
         </div>
 
         <!-- Hoja 2 -->
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesde10.jpg?alt=media&token=a8065b39-4968-41e5-8148-9849c20eacc9" alt="error" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesde10.jpg?alt=media&token=a8065b39-4968-41e5-8148-9849c20eacc9"
+                    alt="error" />
             </div>
             <div class="food-description">
-                <h2 class="food-titile">Food Menu Item 2</h2>
+                <h2 class="food-titile">Sala 532</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                    quae.
+                  Estamos equipados con el software más reciente, ideales para trabajos académicos, investigación, y proyectos personales.
                 </p>
-                <p class="food-price">Price: &#8377; 250</p>
+                <p class="food-price">CESDEFAST</p>
             </div>
         </div>
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesde11.jpg?alt=media&token=9ddf7b0d-f8fd-4674-b410-9db8a87669fa" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesde11.jpg?alt=media&token=9ddf7b0d-f8fd-4674-b410-9db8a87669fa"
+                    alt="" />
             </div>
             <div class="food-description">
-                <h2 class="food-titile">Food Menu Item 3</h2>
+                <h2 class="food-titile">sala 534</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                    quae.
+                    esta sala permite la reserva de equipos para proyectos académicos y personales de nuestros estudiantes
                 </p>
-                <p class="food-price">Price: &#8377; 250</p>
+                <p class="food-price">CESDEFAST</p>
             </div>
         </div>
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/web5.jpg?alt=media&token=556c45e8-c97f-4c3f-a0dd-50eebc624637" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/web5.jpg?alt=media&token=556c45e8-c97f-4c3f-a0dd-50eebc624637"
+                    alt="" />
             </div>
             <div class="food-description">
-                <h2 class="food-titile">Food Menu Item 4</h2>
+                <h2 class="food-titile">Aula de Innovación Digital</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                    quae.
+                    Diseñada para fomentar la creatividad y el aprendizaje,
                 </p>
-                <p class="food-price">Price: &#8377; 250</p>
+                <p class="food-price">CESDEFAST</p>
             </div>
         </div>
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast3.jfif?alt=media&token=37dbe3c7-b50a-41d5-9ed3-6086e8a355ad" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast3.jfif?alt=media&token=37dbe3c7-b50a-41d5-9ed3-6086e8a355ad"
+                    alt="" />
             </div>
             <div class="food-description">
-                <h2 class="food-titile">Food Menu Item 5</h2>
+                <h2 class="food-titile">Sala de Tecnología y Recursos</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
                     quae.
                 </p>
-                <p class="food-price">Price: &#8377; 250</p>
+                <p class="food-price">CESDEFAST</p>
             </div>
         </div>
         <div class="food-menu-item">
             <div class="food-img">
-                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast2.jfif?alt=media&token=41d55651-5ede-4da6-ad33-39b2c0c933f5" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast2.jfif?alt=media&token=41d55651-5ede-4da6-ad33-39b2c0c933f5"
+                    alt="" />
             </div>
             <div class="food-description">
-                <h2 class="food-titile">Food Menu Item 6</h2>
+                <h2 class="food-titile">Espacio de Aprendizaje Digital</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                    quae.
+                    Visítanos para aprovechar nuestros recursos tecnológicos!
                 </p>
-                <p class="food-price">Price: &#8377; 250</p>
+                <p class="food-price">CESDEFAST</p>
             </div>
         </div>
     </div>
@@ -234,7 +242,7 @@
         <!-- Hoja 4-->
         <div class="form-container">
             <h2>Contáctenos</h2>
-            <input type="text" placeholder="Te llamas" />
+            <input type="text" placeholder="Nombre" />
             <input type="email" placeholder="E-Mail" />
             <textarea cols="30" rows="6" placeholder="Escribe tu mensaje"></textarea>
             <a href="#" class="btn btn-primary">Enviar</a>
@@ -245,31 +253,31 @@
     <h2>CESDEFAST &copy; RESERVAS</h2>
     <script src="index.js">
     </script>
-      <script src="node app.js">
+    <script src="node app.js">
     </script>
-      <script src="markdown">
-      </script>
-      <script src="mongo.db">
-      </script>
-     <script src="usuario.js">
-        </script>
-    
-      <script>
+    <script src="markdown">
+    </script>
+    <script src="mongo.db">
+    </script>
+    <script src="usuario.js">
+    </script>
+
+    <script>
         document.getElementById('cargarUsuarios').addEventListener('click', async () => {
-          try {
-            const response = await fetch('http://localhost:3000/usuarios');
-            const usuarios = await response.json();
-            const usuariosDiv = document.getElementById('usuarios');
-            usuariosDiv.innerHTML = '';
-            usuarios.forEach(usuario => {
-              usuariosDiv.innerHTML += `<p>${usuario.nombre} (${usuario.email})</p>`;
-            });
-          } catch (err) {
-            console.error('Error al cargar usuarios', err);
-          }
+            try {
+                const response = await fetch('http://localhost:3000/usuarios');
+                const usuarios = await response.json();
+                const usuariosDiv = document.getElementById('usuarios');
+                usuariosDiv.innerHTML = '';
+                usuarios.forEach(usuario => {
+                    usuariosDiv.innerHTML += `<p>${usuario.nombre} (${usuario.email})</p>`;
+                });
+            } catch (err) {
+                console.error('Error al cargar usuarios', err);
+            }
         });
-        
-      </script>
+
+    </script>
 </footer>
 </body>
 <!-- .................../ JS Code for smooth scrolling /...................... -->
