--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-</body>
+
 
 </html>
 <!-- Hoja 1 -->
@@ -61,7 +61,7 @@
                 <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast3.jfif?alt=media&token=37dbe3c7-b50a-41d5-9ed3-6086e8a355ad"
                     alt="error" />
                 <div class="img-content">
-                    <h3>educaciondigital</h3>
+                    <h3>educacion.digital</h3>
                     <a href="https://www.cesde.edu.co/educaciondigital/" class="btn btn-primary" target="blank">Aprende
                         mas
                     </a>
@@ -73,7 +73,7 @@
                 <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/cesdefast6.jfif?alt=media&token=0b0a4e8a-e393-460d-934f-2a83d54e7f27"
                     alt="error" />
                 <div class="img-content">
-                    <h3>FormacionDigital</h3>
+                    <h3>Formacion.Digital</h3>
                     <a href="https://platzi.com/welcome/cesde/" class="btn btn-primary" target="blank">Ingresa</a>
                 </div>
             </div>
@@ -92,8 +92,7 @@
                 <h2 class="food-titile">Sala de Estudio y Préstamo de Equipos</h2>
                 <p>
                     Ofrecemos computadoras portátiles y de escritorio de alta calidad para estudiantes.
-                    Nuestro personal está disponible para asistencia técnica. ¡Visítanos y aprovecha nuestros servicios
-                    tecnológicos!
+                    Nuestro personal está disponible para asistencia técnica.
                 </p>
                 <p class="food-price">CESDEFAST</p>
             </div>
@@ -108,7 +107,8 @@
             <div class="food-description">
                 <h2 class="food-titile">Sala 532</h2>
                 <p>
-                  Estamos equipados con el software más reciente, ideales para trabajos académicos, investigación, y proyectos personales.
+                    Estamos equipados con el software más reciente, ideales para trabajos académicos, investigación, y
+                    proyectos personales.
                 </p>
                 <p class="food-price">CESDEFAST</p>
             </div>
@@ -121,7 +121,8 @@
             <div class="food-description">
                 <h2 class="food-titile">sala 534</h2>
                 <p>
-                    esta sala permite la reserva de equipos para proyectos académicos y personales de nuestros estudiantes
+                    esta sala permite la reserva de equipos para proyectos académicos y personales de nuestros
+                    estudiantes
                 </p>
                 <p class="food-price">CESDEFAST</p>
             </div>
@@ -147,8 +148,8 @@
             <div class="food-description">
                 <h2 class="food-titile">Sala de Tecnología y Recursos</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                    quae.
+                    En Cesdefast la creatividad digital,
+                    dar un clic es un paso hacia el futuro.
                 </p>
                 <p class="food-price">CESDEFAST</p>
             </div>
@@ -176,7 +177,7 @@
             <div class="customer-detail">
                 <div class="customer-photo">
                     <img src="https://i.postimg.cc/5Nrw360Y/male-photo1.jpg" alt="" />
-                    <p class="customer-name">Ross Lee</p>
+                    <p class="customer-name">Santiago tamayo</p>
                 </div>
             </div>
             <div class="star-rating">
@@ -187,8 +188,8 @@
                 <span class="fa fa-star checked"></span>
             </div>
             <p class="testimonial-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
-                voluptas cupiditate aspernatur odit doloribus non.
+                La plataforma CESDEFAST hace que todo sea tan conveniente. ¡Ahora puedo estudiar
+                sin preocupaciones!"
             </p>
 
         </div>
@@ -196,7 +197,7 @@
             <div class="customer-detail">
                 <div class="customer-photo">
                     <img src="https://i.postimg.cc/sxd2xCD2/female-photo1.jpg" alt="" />
-                    <p class="customer-name">Amelia Watson</p>
+                    <p class="customer-name">alajandra gonzales</p>
                 </div>
             </div>
             <div class="star-rating">
@@ -207,8 +208,9 @@
                 <span class="fa fa-star checked"></span>
             </div>
             <p class="testimonial-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
-                voluptas cupiditate aspernatur odit doloribus non.
+                ¡Chicos, ¿vieron la nueva opción de préstamo de computadoras en CESDEFAST?! ¡Es genial! Ahora podemos
+                solicitarlas fácilmente. ¡Ya no hay excusa
+                para no estar conectados!"
             </p>
 
         </div>
@@ -216,7 +218,7 @@
             <div class="customer-detail">
                 <div class="customer-photo">
                     <img src="https://i.postimg.cc/fy90qvkV/male-photo3.jpg" alt="" />
-                    <p class="customer-name">Ben Roy</p>
+                    <p class="customer-name">jorge uribe</p>
                 </div>
             </div>
             <div class="star-rating">
@@ -227,8 +229,8 @@
                 <span class="fa fa-star checked"></span>
             </div>
             <p class="testimonial-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
-                voluptas cupiditate aspernatur odit doloribus non.
+                "¿Alguien más ha notado lo rápido que es el proceso de préstamo de computadoras en CESDEFAST? ¡Esto realmente facilita
+                nuestros estudios."
             </p>
 
         </div>
