--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
     <div id="reservaContent" style="display: none;">
         <form id="reservaForm" onsubmit="enviar(event)">
             
-            <datalist id="programas">
-                <option value="Programa 1">
-                <option value="Programa 2">
-                <option value="Programa 3">
-            </datalist>
+            
             <form class="form-registro" id="login-Form" action="">
       <h2 class="form-registro__h2">Solicitud préstamo de equipo</h2>
       <label class="form-registro__label" for="programas">
@@ -272,7 +268,7 @@
             <div class="testimonial-box">
                 <div class="customer-detail">
                     <div class="customer-photo">
-                        <img src="https://i.postimg.cc/5Nrw360Y/male-photo1.jpg" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/tamayo.jpg?alt=media&token=77c69180-2201-40f4-a1eb-8260f76bc198" alt="" />
                         <p class="customer-name">Santiago tamayo</p>
                     </div>
                 </div>
