--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <form id="reservaForm" onsubmit="enviar(event)">
 
             
-            <div class="form-registro-container"></div>
+            
             <form class="form-registro" id="login-Form" action="">
                 <h2 class="form-registro__h2">Solicitud préstamo de equipo</h2>
                 <label class="form-registro__label" for="programas">
@@ -77,6 +77,7 @@
                     <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
     </div>
+</div>
 
 
 
