Se vincula el link de reserva con el login

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="showcase-container">
             <h1 class="main-title" id="home">CESDEFAST</h1>
             <p>PRESTAMOS DE EQUIPOS SEDE BELLO</p>
-            <a href="#food-menu" class="btn btn-primary" onclick="mostrarFormulario()">RESERVAS</a>
+            <a href="./views/login.html" class="btn btn-primary" onclick="mostrarFormulario()">RESERVAS</a>
         </div>
     </section>
 
@@ -197,8 +197,8 @@
                 <div class="food-description">
                     <h2 class="food-titile">sala 534</h2>
                     <p>
-                        esta sala permite la reserva de equipos para proyectos académicos y personales de nuestros
-                        estudiantes
+                        Esta sala permite la reserva de equipos para proyectos académicos y personales de nuestros
+                        estudiantes.
                     </p>
                     <p class="food-price">CESDEFAST</p>
                 </div>
@@ -274,7 +274,7 @@
                 <div class="customer-detail">
                     <div class="customer-photo">
                         <img src="https://i.postimg.cc/sxd2xCD2/female-photo1.jpg" alt="" />
-                        <p class="customer-name">alajandra gonzales</p>
+                        <p class="customer-name">Alajandra Gonzalez</p>
                     </div>
                 </div>
                 <div class="star-rating">
@@ -297,7 +297,7 @@
                     <div class="customer-photo">
                         <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/imagen%20jorge%20uribe.png?alt=media&token=3de7984e-4061-4c4e-b55b-5a031c399973"
                             alt="" />
-                        <p class="customer-name">jorge uribe</p>
+                        <p class="customer-name">Jorge Uribe</p>
                     </div>
                 </div>
                 <div class="star-rating">
