--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class="testimonial-box">
                 <div class="customer-detail">
                     <div class="customer-photo">
-                        <img src="https://i.postimg.cc/sxd2xCD2/female-photo1.jpg" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-e192b.appspot.com/o/foto%20aleja.jpg?alt=media&token=f86a2390-b6eb-4926-a5f7-e9f165f88bec" alt="" />
                         <p class="customer-name">Alajandra Gonzalez</p>
                     </div>
                 </div>
